--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./presentacion.css">
+    <link rel="stylesheet" href="./atajo.css">
+    <link rel="stylesheet" href="./estrellas.css">
+
     
     <title>Mi cv</title>
 </head>
@@ -21,11 +25,12 @@
     </div>
     <div class="contenido">
         <div class="presentacion" id="presentacion">
-            <h1>Jose Sanchez</h1>
-            <h3>BIENVENIDO A MI PORTFOLIO COMO DESARROLLADOR TRAINEE</h3>
-            <h3>Si quieres ponerte en contacto conmigo escribeme a <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">joseasanchez758@gmail.com</a> </h3>
-            <button>Descarga mi C.V</button>
-            <div class="redes">
+            <canvas id="projector">Your browser does not support the Canvas element.</canvas>
+            <h1 class="nombre">Jose Antonio Sanchez</h1>
+            <h3 class="bienvenida">BIENVENIDO A MI PORTFOLIO COMO DESARROLLADOR TRAINEE</h3>
+            <h3 class="mail">Si quieres ponerte en contacto conmigo escribeme a <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">joseasanchez758@gmail.com</a> </h3>
+            <button class="descarga">Descarga mi C.V</button>
+            <div class="iconos">
                 <a href="#!" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#!" class="github"><i class="fa-brands fa-github"></i></a>
 
@@ -40,4 +45,5 @@
     </div>
 </body>
 <script src="https://kit.fontawesome.com/545b0d7f51.js" crossorigin="anonymous"></script>
+<script src="./app.js"></script>
 </html>
