--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./presentacion.css">
     <link rel="stylesheet" href="./atajo.css">
-    <link rel="stylesheet" href="./estrellas.css">
+    <link rel="stylesheet" href="./fondo.css">
 
     
     <title>Mi cv</title>
@@ -28,11 +28,11 @@
             <canvas id="projector">Your browser does not support the Canvas element.</canvas>
             <h1 class="nombre">Jose Antonio Sanchez</h1>
             <h3 class="bienvenida">BIENVENIDO A MI PORTFOLIO COMO DESARROLLADOR TRAINEE</h3>
-            <h3 class="mail">Si quieres ponerte en contacto conmigo escribeme a <a href="https://mail.google.com/mail/u/0/#inbox?compose=new">joseasanchez758@gmail.com</a> </h3>
-            <button class="descarga">Descarga mi C.V</button>
-            <div class="iconos">
-                <a href="#!" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#!" class="github"><i class="fa-brands fa-github"></i></a>
+            <h4 class="mail">Si quieres ponerte en contacto conmigo escribeme a <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">joseasanchez758@gmail.com</a> </h3>
+                <div class="iconos">
+                <button class="descarga">Descarga mi C.V</button>
+                <a href="https://www.linkedin.com/in/jose-antonio-sanchez-290912212/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/Joeys101" target="_blank" class="github"><i class="fa-brands fa-github"></i></a>
 
             </div>
         </div>
