--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./presentacion.css">
     <link rel="stylesheet" href="./atajo.css">
     <link rel="stylesheet" href="./fondo.css">
+    <link rel="stylesheet" href="sobreMi.css">
 
     
     <title>Mi cv</title>
@@ -16,7 +17,7 @@
     <div class="container">
     <div class="atajo">
         <img src="./img/images.png" alt="foto" class="foto">
-        <a href="#presetacion"><li>Jose Sanchez</li></a>
+        <a href="#presentacion"><li>Jose Sanchez</li></a>
         <a href="#sobreMi"><li>Sobre mi</li></a>
         <a href="#portfolio"><li>Portfolio</li></a>
         <a href="#formacion"><li>Formacion</li></a>
@@ -26,7 +27,7 @@
     <div class="contenido">
         <div class="presentacion" id="presentacion">
             <canvas id="projector">Your browser does not support the Canvas element.</canvas>
-            <h1 class="nombre">Jose Antonio Sanchez</h1>
+            <h1 class="titulo">Jose Antonio Sanchez</h1>
             <h3 class="bienvenida">BIENVENIDO A MI PORTFOLIO COMO DESARROLLADOR TRAINEE</h3>
             <h4 class="mail">Si quieres ponerte en contacto conmigo escribeme a <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">joseasanchez758@gmail.com</a> </h3>
                 <div class="iconos">
@@ -36,7 +37,14 @@
 
             </div>
         </div>
-        <div class="sobreMi" id="sobreMi"></div>
+        <div class="sobreMi" id="sobreMi">
+            <h1 class="titulo">Sobre mi</h1>
+            <h4 class="descripcion">Comence mi camino estudiando Ingenieria Mecanica Naval pudiendo cumplir mis objetivos y superando expectativas. La llegada de la pandemia me hizo replantear mi situacion y fue ahi cuando emprendi mi camino como programador buscando un trabajo en el mundo virtual. Durante los ultimos 2 años he estado trabajado en proyecto de manera independientes y algunos en cooperativo con grupos adaptando mi forma de trabajo segun el entorno</h3>
+            <h3 class="actualidad">ACTUALMENTE ESTOY ESTUDIANDO Y BUSCO AMPLIAR MI CONOCIMIENTO EN EL MUNDO LABORAL COMO DESARROLLADOR WEB</h2>
+            <h4 class="mail">Si quieres ponerte en contacto conmigo escribeme a <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">joseasanchez758@gmail.com</a> </h3>
+            <h4 class="experiencia">Mira mi experiencia laboral en detalle en <a href="https://www.linkedin.com/in/jose-antonio-sanchez-290912212/">LinkedIn</a></h4>
+
+        </div>
         <div class="portfolio" id="portfolio"></div>
         <div class="formacion" id="formacion"></div>
         <div class="skills" id="skills"></div>
