--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./presentacion.css">
-    <link rel="stylesheet" href="./atajo.css">
-    <link rel="stylesheet" href="./fondo.css">
-    <link rel="stylesheet" href="sobreMi.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/presentacion.css">
+    <link rel="stylesheet" href="./css/atajo.css">
+    <link rel="stylesheet" href="./css/fondo.css">
+    <link rel="stylesheet" href="./css/sobreMi.css">
 
     
-    <title>Mi cv</title>
+    <title>Mi CV</title>
 </head>
 <body>
     <div class="container">
@@ -31,7 +31,7 @@
             <h3 class="bienvenida">BIENVENIDO A MI PORTFOLIO COMO DESARROLLADOR TRAINEE</h3>
             <h4 class="mail">Si quieres ponerte en contacto conmigo escribeme a <a href="https://mail.google.com/mail/u/0/#inbox?compose=new" target="_blank">joseasanchez758@gmail.com</a> </h3>
                 <div class="iconos">
-                <button class="descarga">Descarga mi C.V</button>
+                <a href="./JOSESANCHEZ-CV.pdf" download="JOSESANCHEZ-CV"><button class="descarga">Descarga mi C.V</button></a>
                 <a href="https://www.linkedin.com/in/jose-antonio-sanchez-290912212/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://github.com/Joeys101" target="_blank" class="github"><i class="fa-brands fa-github"></i></a>
 
@@ -45,7 +45,12 @@
             <h4 class="experiencia">Mira mi experiencia laboral en detalle en <a href="https://www.linkedin.com/in/jose-antonio-sanchez-290912212/">LinkedIn</a></h4>
 
         </div>
-        <div class="portfolio" id="portfolio"></div>
+        <div class="portfolio" id="portfolio">
+            <div> <img src="./img/Inspeccion.png" alt=""></div>
+            <div> <img src="./img/PokemonShop.png" alt=""></div>
+            <div> <img src="./img/Registro.png" alt=""></div>
+            <div></div>
+        </div>
         <div class="formacion" id="formacion"></div>
         <div class="skills" id="skills"></div>
         <div class="contacto" id="contacto"></div>
